# headless-andorid-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  USECASES.md  agent.py  main.py  pyproject.toml
buckeyelink/: auth.py  browser.py  tools.py
canvas/: tools.py
current-buckeyelinkautomation/scarlet/: package-lock.json  package.json
current-buckeyelinkautomation/scarlet/app/: globals.css  layout.tsx  page.tsx
current-buckeyelinkautomation/scarlet/app/app/academics/: page.tsx
current-buckeyelinkautomation/scarlet/app/app/campus/: page.tsx
current-buckeyelinkautomation/scarlet/app/app/connect/: page.tsx
current-buckeyelinkautomation/scarlet/components/: Dither.tsx  GlassPanel.tsx  InputBar.tsx  LeftRail.tsx  SMSMessageRow.tsx  ScanLine.tsx
current-buckeyelinkautomation/scarlet/components/domain/: DiningCard.tsx  EventRow.tsx  ParkingRing.tsx  ScheduleGrid.tsx
grubhub/: automation.py  emulator.py  tools.py
messaging/: chat_store.py  client.py  events.py  sender.py  verify.py  webhook.py
sms/: sender.py  webhook.py
tools/: athletics.py  buildings.py  bus.py  calendar.py  classes.py  dining.py  directory.py  events.py  foodtrucks.py  library.py  merchants.py  parking.py  recsports.py  studentorgs.py  utils.py
web/: package-lock.json  package.json
web/app/: globals.css
web/app/app/: layout.tsx  page.tsx
web/app/app/dining/: page.tsx
web/app/app/feed/: page.tsx
web/backend/: agent.py  server.py
web/components/: DomainHero.tsx  GlassPanel.tsx  PulseDot.tsx  ToolCallCard.tsx
web/components/domain/: AssignmentRow.tsx  GradeBar.tsx
(+2 files in other folders)
